# common-sense-coder

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
scripts/: inspector  test
src/: constants.rs  init.rs  io_intercept.rs  lang.rs  logging.rs  main.rs  mcp.rs  progress_guard.rs  tasks.rs
src/lsp/: init.rs  location.rs  mod.rs  progress_guard.rs  requests.rs  tokens.rs
src/mcp/: error.rs  location.rs  mod.rs  search.rs  tokens.rs
tests/: cli.rs  mcp.rs
tests/fixtures/dependency_lib/: Cargo.toml
tests/fixtures/dependency_lib/src/: lib.rs
tests/fixtures/main_lib/: Cargo.toml
tests/fixtures/main_lib/src/: lib.rs  sub.rs
tests/fixtures/main_lib/unused_workspace_member/: Cargo.toml
tests/fixtures/main_lib/unused_workspace_member/src/: lib.rs
tests/fixtures/main_lib/workspace_member/: Cargo.toml
tests/mcp/: find_symbol.rs  main.rs  metadata.rs  setup.rs  symbol_info.rs
