[package]
name = "common-sense-coder"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive", "env"] }
dotenvy = "0.15.7"
futures = "0.3.31"
lsp-client = "0.1.0"
lsp-types = "0.97.0"
rmcp = { version = "0.3.0", features = ["macros", "transport-io"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.141", features = ["preserve_order"] }
tokio = { version = "1.46.1", features = ["fs", "macros", "process", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2.0.17"
insta = { version = "1.43.1", features = ["json"] }
predicates = "3.1.3"
rmcp = { version = "0.3.0", features = ["client", "transport-child-process"] }
tempfile = "3.20.0"

[lints.rust]
missing_copy_implementations = "deny"
missing_debug_implementations = "deny"
rust_2018_idioms = { level = "deny", priority = -1 }
unexpected_cfgs = { level = "deny", check-cfg = ['cfg(tokio_unstable)'] }
unreachable_pub = "deny"
unused_crate_dependencies = "deny"

[lints.clippy]
clone_on_ref_ptr = "deny"
dbg_macro = "deny"
explicit_iter_loop = "deny"
future_not_send = "deny"
todo = "deny"
use_self = "deny"
allow_attributes = "warn"

[lints.rustdoc]
bare_urls = "deny"
broken_intra_doc_links = "deny"
private_intra_doc_links = "allow"

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
