[package]
name = "common-sense-coder"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive", "env"] }
dotenvy = "0.15.7"
futures = "0.3.32"
itertools = "0.14.0"
lsp-client = "0.1.0"
lsp-types = "0.97.0"
rmcp = { version = "0.8", features = ["macros", "transport-io"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150", features = ["preserve_order"] }
tokio = { version = "1.52.3", features = ["fs", "process", "rt-multi-thread", "signal"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2.2.2"
insta = { version = "1.47.2", features = ["json"] }
nix = { version = "0.31.3", features = ["process", "signal"] }
predicates = "3.1.4"
rmcp = { version = "0.8", features = ["client", "transport-child-process"] }
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = ["macros"] }

[lints.rust]
missing_copy_implementations = "deny"
missing_debug_implementations = "deny"
rust_2018_idioms = { level = "deny", priority = -1 }
unexpected_cfgs = { level = "deny", check-cfg = ['cfg(tokio_unstable)'] }
unreachable_pub = "deny"
unused_crate_dependencies = "deny"

[lints.clippy]
clone_on_ref_ptr = "deny"
dbg_macro = "deny"
explicit_iter_loop = "deny"
future_not_send = "deny"
todo = "deny"
use_self = "deny"
allow_attributes = "warn"

[lints.rustdoc]
bare_urls = "deny"
broken_intra_doc_links = "deny"
private_intra_doc_links = "allow"

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
